Fix Sonar warnings in integration tests